message ActionItem
{
  enum ActionType
  {
    UPDATE = 0;
    DELETE = 1;
  }
  required ActionType action = 3;

  required string filename = 4;
  required uint64 version = 5;
  required uint32 timestamp = 6;

  optional bytes  file_hash = 7;
  optional uint32 atime = 8;
  optional uint32 mtime = 9;
  optional uint32 ctime = 10;
  optional uint32 mode  = 11;

  optional string parent_device_name = 12;
  optional uint64 parent_seq_no = 13;
}
